objects/ssot__MailLetter__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ChannelEngagementId__c</fullName>
        <label>Channel Engagement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeliveryAddressCityName__c</fullName>
        <label>Delivery Address City Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeliveryAddressPostalCode__c</fullName>
        <label>Delivery Address Postal Code</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Mail Letter Engagement Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MessageText__c</fullName>
        <label>Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PostmarkDate__c</fullName>
        <label>Postmark Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819732774_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MailLetter_ChannelEngagementId_map_C_rel</label>
        <referenceTo>ssot__ChannelEngagement__dlm</referenceTo>
        <relationshipLabel>MailLetter_ChannelEngagementId_map_C_rel</relationshipLabel>
        <relationshipName>rel_1719819732774_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>